--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "Boilerplate",
-  "version": "0.0.1",
-  "description": "Boilerplate for ASOS Projects",
-  "main": "gulpfile.js",
+  "name": "ShinchyBoilerplate",
+  "version": "1.0.1",
+  "description": "SHINCHY - Boilerplate for future websites using Sass, ES2015, Karma Test Runners and Jade Templating",
   "dependencies": {
     "gulp": "^3.9.0",
     "browser-sync": "^2.7.12",
     "del": "^1.2.0",
     "gulp-autoprefixer": "^2.3.1",
-    "gulp-concat": "^2.5.2",
     "gulp-data": "^1.2.0",
-    "gulp-babel": "^5.1.0",
-    "gulp-filesize": "^0.0.6",
     "gulp-imagemin": "^2.2.1",
     "gulp-jade": "^1.0.1",
-    "gulp-jshint": "^1.11.0",
-    "gulp-livereload": "^3.8.0",
-    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.1",
-    "jshint-stylish": "^2.0.0",
     "gulp-uglify": "^1.2.0",
-    "path": "^0.11.14"
+    "path": "^0.11.14",
+    "babelify": "^6.1.3",
+    "browserify": "^10.2.6",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.12.37",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-firefox-launcher": "^0.1.6",
+    "karma-jasmine": "^0.3.6",
+    "karma-requirejs": "^0.2.2",
+    "karma-safari-launcher": "^0.1.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "gulp watch"
   },
   "keywords": [
-    "Boilerplate"
+    "SHINCHY", "Boilerplate"
   ],
   "author": "Shaun Hinchy",
   "license": "MIT"
